istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-devops-demo
spec:
  hosts:
  - "springboot-devops-demo.hbstarjason.com"
  gateways:
  - springboot-devops-demo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: k8s-example
